--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@
     <section class="section">
       <!-- end of section title -->
       <div class="section-center projects-page-center">
-         <!-- single project -->
+        <!-- single project -->
         <article class="single-project">
           <div class="project-container">
             <img src="./images/project-1.jpeg" alt="single project" />
@@ -105,15 +105,21 @@
           <div class="project-details">
             <h4>SkimLit_NLP_Project</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
-              placeat dicta eveniet similique excepturi magni quisquam sapiente
-              delectus sunt quam.
+              Engineered an NLP model to replicate PubMed 200k RCT paper’s deep
+              learning approach for medical text classification. 
+              <p>
+               Demonstrated model’s sequential sentence 
+               prediction in ~200,000 RCT abstracts,
+              enhancing NLP applications in medical research.
+              </p>
             </p>
             <div class="project-footer">
               <span>
                 <i class="fab fa-github"></i>
               </span>
-              <a href="https://github.com/Ankit-Jaipuriar/SkimLit_Project">source code</a>
+              <a href="https://github.com/Ankit-Jaipuriar/SkimLit_Project"
+                >source code</a
+              >
             </div>
           </div>
         </article>
@@ -129,20 +135,22 @@
           <div class="project-details">
             <h4>Food_vision_ML</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
-              placeat dicta eveniet similique excepturi magni quisquam sapiente
-              delectus sunt quam.
+              Developed Food Vision Big™, an extensive machine learning model utilizing the full Food101 dataset
+              with 75,750 training images and 25,250 testing images, aiming to surpass the Deep Food paper’s
+              77.4% top-1 accuracy.
             </p>
             <div class="project-footer">
               <span>
                 <i class="fab fa-github"></i>
               </span>
-              <a href="https://github.com/Ankit-Jaipuriar/food_vision_project">source code</a>
+              <a href="https://github.com/Ankit-Jaipuriar/food_vision_project"
+                >source code</a
+              >
             </div>
           </div>
         </article>
         <!-- end of single project -->
-          <!-- single project -->
+        <!-- single project -->
         <article class="single-project">
           <div class="project-container">
             <img src="./images/project-1.jpeg" alt="single project" />
@@ -153,15 +161,15 @@
           <div class="project-details">
             <h4>TO-DO List Application</h4>
             <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore
-              placeat dicta eveniet similique excepturi magni quisquam sapiente
-              delectus sunt quam.
+               Crafted a modern and intuitive UI, ensuring a visually appealing and responsive experience
             </p>
             <div class="project-footer">
               <span>
                 <i class="fab fa-github"></i>
               </span>
-              <a href="https://github.com/Ankit-Jaipuriar/TODO-LIST_APP">source code</a>
+              <a href="https://github.com/Ankit-Jaipuriar/TODO-LIST_APP"
+                >source code</a
+              >
             </div>
           </div>
         </article>
@@ -208,7 +216,9 @@
         <!-- end of single item -->
       </ul>
 
-      <p>&copy; <span id="date"></span> Ankit Jaipuriar. All rights reserved.</p>
+      <p>
+        &copy; <span id="date"></span> Ankit Jaipuriar. All rights reserved.
+      </p>
     </footer>
     <script src="./js/app.js"></script>
   </body>
